jekyll-site-src/_css_src/components/_article.scss
.article {
  @include mdc-typography(body1);

  max-width: 760px;

  h1 {
    // See _component-icons.scss for additional mutations in component pages.
    @include mdc-typography(headline);
    margin-bottom: 24px;
  }

  h2 {
    @include mdc-typography(subheading2);
    font-size: 1.25rem;
    margin: 56px 0 24px;
  }

  h3 {
    @include mdc-typography(subheading2);
    font-weight: 500;
    margin: 32px 0 0;
  }

  h4 {
    @include mdc-typography(subheading2);
    margin: 20px 0 0;
  }

  h5 {
    @include mdc-typography(body2);
    font-weight: 500;
    margin: 20px 0 0;
  }

  h6 {
    @include mdc-typography(body1);
  }

  h1,
  h2 {
    font-family: $ui-font-family;
  }

  hr {
    border: 0;
    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
    margin: 1.5rem 0;
    padding: 0;
  }

  p {
    margin: 16px 0;
  }

  h2 + p,
  h3 + p,
  h4 + p,
  h5 + p {
    margin-top: 4px;
  }

  // Lists

  li > ul,
  li > ol {
    padding-top: 8px;
  }

  // Data table

  table {
    // Display as inline-block so that we can introduce a horizontal scroll on
    // smaller screens.
    display: inline-block;
    border: 1px solid $grey-200;
    overflow-x: auto;

    margin: 8px 0 32px;
  }

  th,
  td {
    border: 1px solid $grey-200;
    padding: 12px 12px 12px 24px;

    &:first-child {
      border-left: none;
    }

    &:last-child {
      border-right: none;
    }
  }

  th {
    background: $grey-50;
    border-top: none;
    color: $black-54;
    font-weight: 500;
    text-align: left;
  }

  td {
    &:first-child code {
      background: 0;
    }
  }

  tr:last-child > td {
    border-bottom: none;
  }

  &--full-width {
    max-width: 100%;
  }

  // Screenshots/videos

  &__asset {
    display: flex;
    align-items: center;
    justify-content: center;

    background: $black-05;
    padding: 24px;
    margin: 24px 0 28px;

    > video,
    > img {
      max-width: 100%;
    }

    &--screenshot {
      > video,
      > img {
        width: 240px;
      }
    }
  }
}

